# what-time-is-it-now

./: .gitignore  README.md  __init__.py  main.py  ocr.py  paddle_ocr.py  pyproject.toml  requirements.txt
app/: README_useffmpeg.md  ffmpeg_玩法.py  useffmpeg.py  withffmpeg.py
